added new cv info

--- a/src/Pages/styles/AboutProduct.css
+++ b/src/Pages/styles/AboutProduct.css
@@ -1,20 +1,21 @@
-.software-image{
-    border-radius: 100%;
+.software-image {
+  border-radius: 20%;
 
-    /* 
+  /* 
     margin: 20px;
     display: block; */
-    
 }
 
-.first-card{
-    display: flex;
-    margin: 10px;
+.first-card {
+  width: 50%;
+  display: block;
+  margin: 0px;
+  padding: 10px;
 }
 
-.shadow-card{
-    box-shadow: 1px 1px 2px #7e7e7e;
-    border-radius: 30px;
-    padding: 5px;
-    margin: 1px;
+.shadow-card {
+  box-shadow: 0px 0px 0px #7e7e7e;
+  border-radius: 30px;
+  padding: 25px;
+  margin: 1px;
 }
