--- a/src/Components/styles/Card.css
+++ b/src/Components/styles/Card.css
@@ -1,28 +1,17 @@
+.portfolio__item {
+  border-radius: 20px;
 
-
-
-.portfolio__item{
-    border-radius: 20px;
-    box-shadow: 1px 0px 12px  #9e9e9e;
-    margin: 10px;
-    
-    
-
-    
+  margin: 10px;
+  padding: 30px;
+  box-shadow: 0px 0px 10px #9e9e9e;
 }
 
-
-
-
-
-.c-img{
-    border-radius: 20px;
-    width: 300;
-    height: 300;
+.c-img {
+  border-radius: 20px;
+  width: 300;
+  height: 300;
 }
 
-
-
-.button{
-    margin: 10px;
+.button {
+  margin: 10px;
 }
